 - Созданы структуры ImageManager, Image, Rect. Можно легко делать множество картинок и двигать их.
20.01.2023 (Толя)
 - Добавлена отрисовка alpha канала (прозрачность)
21.01.2023 (Толя)
 - Расширена архитектура модулей (Компоненты, время, физика)
 - Добавлена структура Clock, это была попытка получить здоровый deltatime, но пока не вышло.
 - Закинул общую картинку в проект, убрал модуль с событиями, поменял обработку событий в мейне и добавил вычисление dt.
 - Починил отрисовку картинок в плане позиции. Теперь левый нижний угол картинки соответствует левому нижнему углу rect.
 - Улучшено движение картинок, квадратов, добавлены более удобные методы. Пофикшена задержка цикла, чтобы не замедляла игру.
22.01.2023 (Толя)
 - Переименовал картинки в спрайты.

### ПЕРВАЯ ИТЕРАЦИЯ: Лиса, ракетница, манекен, который получает урон, физика выпускаемых ракет, движение лисы (можно без прыжка).
? Добавить спрайты
? Добавить группу спрайтов
? Добавить LayeredGroup для спрайтов
? Добавить SpriteManager
? Добавить PhysicsManager
? Добавить Component(enum, туда пишем все перечисления компонентов)
? Добавить ComponentManager(внутрь спрайта наверное запихну)
? Добавить PhysicsComponent(enum, туда пишем всё что является компонентом физики)
? Добавить AnimationComponent
? Добавить анимацию смены кадров
? Добавить таймеры (SetTimeout, SetInterval, аля js)
? Добавить столкновения и их проверку через Rect, а потом пускай этим PhysicsManager занимается вообще
? или Добавить GravityComponent(и добавить его в перечисление PhysicsComponent)
? или Добавить физику по Верлету и не париться, прям как в том видосе
? Добавить управление
? Добавить Unit(юнита, у него будет хп и какие-то ещё штуки)
? Добавить UnitComponent (такие можно будет добавлять только в юнита, enum по типу PhysicsComponent)
? Добавить Лису
? Добавить Ракетницу
? Добавить Снаряд
? Добавить Мишень

### ВТОРАЯ ИТЕРАЦИЯ: Больше оружия, ветер, разные фоны для уровня, базовый звук.

