@@ -19,6 +19,7 @@
  - Улучшено движение картинок, квадратов, добавлены более удобные методы. Пофикшена задержка цикла, чтобы не замедляла игру.
 22.01.2023 (Толя)
  - Переименовал картинки в спрайты.
+ - Разобрался с Trait-ами, удалил повторяющийся код в Sprite и Rect, добавил Layered, Rectangular трейты, начал делать спрайты.
 
 ### ПЕРВАЯ ИТЕРАЦИЯ: Лиса, ракетница, манекен, который получает урон, физика выпускаемых ракет, движение лисы (можно без прыжка).
 ? Добавить спрайты
